test/files/neg/t4928.scala
class C {
  def f(a: Int, b: Int = 0) = 0
  f(z = 0, a = 1)
}
