test/files/neg/t4928.check
t4928.scala:3: error: unknown parameter name: z
  f(z = 0, a = 1)
      ^
1 error
